--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "${fileDirname}",
             "env": {},
-            "args": []
+            "args": ["-config=F:/gitlab-source/jenkins-deploy/hi-aliyun-prod/hi-h5-llcs_settings/settings.json"]
         }
     ]
 }
